made changes to indicate that this blog is under construction. made other changes remove icons, images, refs to David L. etc.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@ title: Kusto ADE development blog
           </header>
           <div class="post_excerpt">
             <p>
-              Welcome to Azure Data Explorer / Kusto Development blog.
+              This AgileSight's blog is still under construction. 
+              When finished it will contain posts and reusable assets that should be useful while constructing applications that interact with Kusto clusters.
             </p> 
             <p>
-                Sharing our experience and assets  to help the adoption of this powerful technology.
+                Please visit us in a few weeks. Thanks.
             </p> 
           </div>
         </article>
