--- a/archive.html
+++ b/archive.html
@@ -5,14 +5,14 @@ title: Archive
 
 <div>
 
-  <h2>Archive</h2>
+  <h1>Blog Posts</h1>
 
   <section class="archive_list">
     {% for category in site.categories %}
 
-    <div class="category-name">
+    <!-- <div class="category-name">
       <h2>{{ category | first }}</h2>
-    </div>
+    </div> -->
     {% for post in category.last %}
 
     <div class="post_title">
@@ -26,9 +26,9 @@ title: Archive
 
   </section>
 
-  <footer class="article-footer" mar>
+  <!-- <footer class="article-footer" mar>
     {% include author.html %}
-  </footer>
+  </footer> -->
 </div>
 
 
