Adds what you need post... changes h1 font size remove unnecesary resources

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Kusto ADE development blog
         {% if post.author %}
         <span class="author_meta">
           <img src="{{site.baseurl}}/assets/img/{{post.author}}.jpg"></img>
-          <span>David Lin</span>
+          <span>{{post.author}}</span>
         </span>
         {% endif %}
         -->
